# BitVector

./: BVManager.h  BitVector.cpp  BitVector.h  CMakeLists.txt  CommonUtility.cpp  README.md  SparseSamplingRank.h  SparseSamplingTwoLevelRank.h  main.cpp
include/: AbstractRankPolicy.h  AbstractSelectPolicy.h  BVManager.h  BitVector.h  CommonUtility.h  NullPolicies.h  SparseSamplingRank.h  SparseSamplingTwoLevelRank.h
src/: BitVector.cpp  CommonUtility.cpp
